{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 199,
  "lineage": "5f59a90c-61ec-12e5-b655-dd599b79296e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "client_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:780718310965:loadbalancer/app/ftb-alb-client/6585dc537b7fc7ae",
            "arn_suffix": "app/ftb-alb-client/6585dc537b7fc7ae",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ftb-alb-client-135607164.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:780718310965:loadbalancer/app/ftb-alb-client/6585dc537b7fc7ae",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ftb-alb-client",
            "preserve_host_header": false,
            "security_groups": [
              "sg-022032a8da212e12f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06707be00ed293248"
              },
              {
                "subnet_id": "subnet-0cc3c929499869a8c"
              }
            ],
            "subnets": [
              "subnet-06707be00ed293248",
              "subnet-0cc3c929499869a8c"
            ],
            "tags_all": {
              "repository": "fargate-terraform-blog-infra"
            },
            "vpc_id": "vpc-0f637f40c6e37f639",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.ftb_client_alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_client_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:780718310965:listener/app/ftb-alb-client/6585dc537b7fc7ae/114be27f0d8c87c5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:780718310965:targetgroup/ftb-alb-client-tg/4307576a930eefc8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:780718310965:listener/app/ftb-alb-client/6585dc537b7fc7ae/114be27f0d8c87c5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:780718310965:loadbalancer/app/ftb-alb-client/6585dc537b7fc7ae",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "repository": "fargate-terraform-blog-infra"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.client_alb",
            "aws_lb_target_group.alb_client_target_group",
            "aws_security_group.ftb_client_alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_client_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:780718310965:targetgroup/ftb-alb-client-tg/4307576a930eefc8",
            "arn_suffix": "targetgroup/ftb-alb-client-tg/4307576a930eefc8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,307",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:780718310965:targetgroup/ftb-alb-client-tg/4307576a930eefc8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:780718310965:loadbalancer/app/ftb-alb-client/6585dc537b7fc7ae"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ftb-alb-client-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "repository": "fargate-terraform-blog-infra"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f637f40c6e37f639"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_client_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:780718310965:security-group/sg-0aae6a977f327aac4",
            "description": "Allow incoming http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0aae6a977f327aac4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fargate-terraform-blog-ECS-Service-sg",
            "name_prefix": "",
            "owner_id": "780718310965",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "repository": "fargate-terraform-blog-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f637f40c6e37f639"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_vpce_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:780718310965:security-group/sg-0ed217687ab5fbfe9",
            "description": "Allow incoming http/HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0ed217687ab5fbfe9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ftb-ecs-vpce-sg",
            "name_prefix": "",
            "owner_id": "780718310965",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "repository": "fargate-terraform-blog-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f637f40c6e37f639"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ftb_client_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:780718310965:security-group/sg-022032a8da212e12f",
            "description": "Allow incoming http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-022032a8da212e12f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ftb-alb-client-sg",
            "name_prefix": "",
            "owner_id": "780718310965",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "repository": "fargate-terraform-blog-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f637f40c6e37f639"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:780718310965:vpc-endpoint/vpce-02711c4a12f15861c",
            "dns_entry": [
              {
                "dns_name": "vpce-02711c4a12f15861c-ws5t5h49.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-02711c4a12f15861c-ws5t5h49-eu-west-1a.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-02711c4a12f15861c-ws5t5h49-eu-west-1c.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "api.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z09294843MS0CR8RSCHD5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02711c4a12f15861c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05d59a52616a80579",
              "eni-0fdba656381e8be24"
            ],
            "owner_id": "780718310965",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ed217687ab5fbfe9"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-06707be00ed293248",
              "subnet-0cc3c929499869a8c"
            ],
            "tags": {
              "Name": "ftb-ecs-api-vpce"
            },
            "tags_all": {
              "Name": "ftb-ecs-api-vpce",
              "repository": "fargate-terraform-blog-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f637f40c6e37f639"
          },
          "dependencies": [
            "aws_security_group.ecs_vpce_service_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:780718310965:vpc-endpoint/vpce-011a6392f5b1cc081",
            "dns_entry": [
              {
                "dns_name": "vpce-011a6392f5b1cc081-lzgn9q9b.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-011a6392f5b1cc081-lzgn9q9b-eu-west-1a.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-011a6392f5b1cc081-lzgn9q9b-eu-west-1c.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z09405063AFNFEVMB0LJH"
              },
              {
                "dns_name": "*.dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z09405063AFNFEVMB0LJH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-011a6392f5b1cc081",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-087dacec9f297f3e7",
              "eni-0fe80cb301710c44a"
            ],
            "owner_id": "780718310965",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ed217687ab5fbfe9"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-06707be00ed293248",
              "subnet-0cc3c929499869a8c"
            ],
            "tags": {
              "Name": "ftb-ecs-dkr-vpce"
            },
            "tags_all": {
              "Name": "ftb-ecs-dkr-vpce",
              "repository": "fargate-terraform-blog-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f637f40c6e37f639"
          },
          "dependencies": [
            "aws_security_group.ecs_vpce_service_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_logs_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:780718310965:vpc-endpoint/vpce-0af33bd070bb4e8b3",
            "dns_entry": [
              {
                "dns_name": "vpce-0af33bd070bb4e8b3-ofmxg9fm.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0af33bd070bb4e8b3-ofmxg9fm-eu-west-1a.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0af33bd070bb4e8b3-ofmxg9fm-eu-west-1c.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "logs.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z04063913IU8CJOA0IGI"
              },
              {
                "dns_name": "logs.eu-west-1.api.aws",
                "hosted_zone_id": "Z04080071MCWEZ75S7UFV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0af33bd070bb4e8b3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a5e478c3e6641609",
              "eni-0dd4abda1c2ceed57"
            ],
            "owner_id": "780718310965",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ed217687ab5fbfe9"
            ],
            "service_name": "com.amazonaws.eu-west-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-06707be00ed293248",
              "subnet-0cc3c929499869a8c"
            ],
            "tags": {
              "Name": "ftb-ecs-logs"
            },
            "tags_all": {
              "Name": "ftb-ecs-logs",
              "repository": "fargate-terraform-blog-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f637f40c6e37f639"
          },
          "dependencies": [
            "aws_security_group.ecs_vpce_service_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_s3_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:780718310965:vpc-endpoint/vpce-0b8ea0e7a1c4f3779",
            "cidr_blocks": [
              "18.34.240.0/22",
              "18.34.32.0/20",
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "id": "vpce-0b8ea0e7a1c4f3779",
            "owner_id": "780718310965",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "tags": {
              "Name": "ftb-ecs-s3"
            },
            "tags_all": {
              "Name": "ftb-ecs-s3",
              "repository": "fargate-terraform-blog-infra"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f637f40c6e37f639"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_api_vpce_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:780718310965:vpc-endpoint/vpce-089f0298e619e3e99",
            "cidr_blocks": [
              "18.34.240.0/22",
              "18.34.32.0/20",
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "id": "vpce-089f0298e619e3e99",
            "owner_id": "780718310965",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "tags": {
              "Name": "regeringsrobot-ecs-api-s3-gw"
            },
            "tags_all": {
              "Name": "regeringsrobot-ecs-api-s3-gw",
              "repository": "fargate-terraform-blog-infra"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f637f40c6e37f639"
          }
        }
      ]
    }
  ]
}